<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">建业至尊</string>
    <string name="sellprods">卖货</string>
    <string name="zhizun_preview">票据预览</string>
    <string name="add_commodity">新建商品</string>
    
    
    <string name="in_school_dynamic">在校动态</string>
    <string name="in_school_comment">在校点评</string>
    <string name="latest_reply">最新回复</string>
    <string name="login_text">登录</string>
    <string name="user_login">用户登录</string>
    <string name="login_text_fail">用户名或密码不正确</string>
    <string name="login_text_success">登录成功</string>
    <string name="username_patten_invalid">用户名应为4-20个字符，可由中英文字母、数字、"-"、"_"组成</string>
    <string name="max_person_familyname_len">5</string>
    <string name="max_person_nickname_len">5</string>
    <string name="registration_text">注册</string>
    <string name="registration_jiazhang_text">家长注册</string>
    <string name="title_text_cancel">取消</string>
    <string name="title_text_myepei">我的益培</string>
    <string name="title_text_myagent">我的代理</string>
    <string name="title_text_myinvitation">我的邀请</string>
    <string name="title_text_myclass">我的班级</string>
    <string name="title_text_babyorg">教育机构</string>
    <string name="title_text_mypersoninfo">我的资料</string>
    <string name="title_text_requestparent">邀请家长</string>
    <string name="title_text_requestdetail">邀请详细</string>
    <string name="title_text_requestteacher">邀请老师</string>
    <string name="title_text_selectstudent">选择宝宝</string>
    <string name="title_text_addstudent">新增</string>
    <string name="title_text_jxhd">家校互动</string>
    <string name="title_text_senddynamic">发送在校动态</string>
    <string name="title_text_sendremark">发送在校点评</string>
    <string name="title_text_sendnotice_immediately">立即发送</string>
    <string name="title_text_send">发送</string>
    <string name="title_text_sendnotice_timing">定时发送</string>
    <string name="title_text_notice_send">通知发送</string>
    <string name="title_text_cat">兴趣爱好</string>
    <string name="title_text_about">关于益培</string>
    <string name="title_voice_send">发表心声</string>
    <string name="title_text_settings">设置</string>
    <string name="notice_templete">通知模板</string>
    <string name="title_text_select_send_pattern">选择发送模式</string>
    <string name="title_text_myinvitation_send">发出的邀请</string>
    <string name="title_text_myinvitation_receive">收到的邀请</string>
    <string name="dynamic_favorite_yes">已收藏</string>
    <string name="dynamic_favorite_no">收藏</string>
    <string name="text_select">选择</string>
    <string name="gl_choose_title">请选择图片</string>
    <string name="title_text_choose_receiver">选择接收人</string>
    <string name="title_text_choose_agentteacher">选择代理老师</string>
    <string name="title_text_editbabyinfo">编辑基本信息</string>
    <string name="text_islike_like">赞</string>
    <string name="text_islike_liked">已赞</string>
    <string name="text_title_change">变更</string>
    <string name="text_comment_default_prompt">说点什么吧</string>
    <string name="text_switchrole">角色切换</string>
    <string name="text_noticebox_send">发件箱</string>
    <string name="text_noticebox_receive">收件箱</string>
    <string name="text_text_attence">考勤记录</string>
    <string name="text_text_today_attence">今日考勤</string>
    <string name="back_exit_tips">再按一次退出</string>
    <string name="text_title_voice">家长心声</string>
    <string name="text_save">保存</string>
    <string name="title_text_share">来自益培网的分享</string>
    <string name="text_history">历史</string>
    <string name="text_history_list">历史记录</string>
    <string name="more_data">加载更多</string>
    <string name="load_more">加载更多</string>
    <string name="pull_to_refresh_pull_label">松开刷新</string>
    <string name="pull_to_refresh_refresh_lasttime">最近更新</string>
    <string name="latest_reply_detail">详情</string>
    <string name="show_detail">显示详情</string>
    <string name="hide_detail">隐藏详情</string>
    <string name="show_more">更多•••</string>
    <string name="hide_more">隐藏更多</string>
    <string name="text_homework_all">全部作业</string>
    <string name="text_homework_assign">布置作业</string>
    <string name="text_info_no_family_join">没有家庭成员加入机构</string>
    <string name="text_info_no_org_join">尚未加入机构</string>
    <string name="text_info_no_family_join_all_select">该班级没有家庭成员加入机构，不能全选</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="left_drawer_no_login_tip">登录后，将推荐给你更多感兴趣的文章</string>
    <string name="left_drawer_item_search">搜索</string>
    <string name="left_drawer_item_favorite">收藏</string>
    <string name="left_drawer_item_message">消息</string>
    <string name="left_drawer_item_offline">离线</string>
    <string name="left_drawer_item_offline_cancel">取消离线</string>
    <string name="left_drawer_item_activity">活动</string>
    <string name="left_drawer_item_setting">设置</string>
    <string name="left_drawer_item_feedback">反馈</string>
    <string name="left_drawer_item_appstore">精彩应用</string>
    <string name="drawer_right_logout_hint_text">"登录后 可关注好友评论和收藏"</string>
    <string name="drawer_right_tip_no_login">未登录</string>
    <string name="ss_pattern_update">发现%1$d条更新</string>
    <string name="ss_have_a_rest">暂无更新, 休息一会儿</string>
    <string name="action_night_mode">夜间模式</string>
    <string name="action_day_mode">日间模式</string>
    <string name="setting_list_mode">列表显示摘要</string>
    <string name="setting_font_size">字体大小</string>
    <string name="setting_list_comment">列表页评论</string>
    <string name="setting_refresh_list">列表页刷新</string>
    <string name="setting_load_image">2G/3G网络流量</string>
    <string name="setting_notify">推送通知</string>
    <string name="setting_interactive">互动插件</string>
    <string name="setting_share_when_favor">收藏时转发</string>
    <string name="setting_share_when_diggbury">顶踩时转发</string>
    <string name="setting_clear">清理缓存</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_recommend">精彩应用推荐</string>
    <string name="setting_update">检查新版本</string>
    <string name="setting_night_mode">夜间模式</string>
    <string name="setting_use_swipe">左右翻页</string>
    <string name="setting_switch_domain">启动网络调试</string>
    <string name="setting_close_shake_hand">关闭摇一摇切换夜间模式</string>
    <string name="setting_use_help">使用帮助</string>
    <string name="app_copyright">© 头条网 toutiao.com</string>
    <string name="favorite_btn_delete">删除</string>
    <string name="favorite_btn_edit">编辑</string>
    <string name="favorite_btn_cancel">取消</string>
    <string name="dislike_dlg_lable_speech">读文章</string>
    <string name="drawer_btn_rss">频道管理</string>
    <string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_more_category">更多频道</string>
    <string name="subscribe_manager_category_info">单击增删频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>
    <string name="label_cancel_dislike">撤消</string>
    <string name="day_today">今天</string>
    <string name="day_yesterday">昨天</string>
    <string name="day_before">前天</string>
    <string name="search_count_fmt">发现%1$s篇文章</string>
    <string name="pattern_update">发现%1$d条更新</string>
    <string name="city_category_list_header">点击选择其他城市</string>
    <string name="city_category_list_hint">选择城市，立即查看本地新闻</string>
    <string name="city_category_list_notify_no_city">请先选择您关注的城市</string>
    <string name="retry_large_image"><u>图片加载失败</u></string>
    <string name="gl_wait">请稍等</string>
    <string name="load_tips">正在地址加载...</string>
    <string name="attence_class_no_student">无在读学员</string>
    <string name="attence_class_add_attence">记录考勤</string>
    <string name="noupdate">已经是最新版本，无需更新</string>
    <string name="update_dlg_title">检测到新的版本</string>
    <string name="update_dlg_msg">检测到新的版本</string>
    <string name="update_start">开始更新</string>
    <string name="update_cancel">暂不更新</string>
    <string name="update_notofy_title">下载进度:</string>
    <string name="update_notofy_content_force_pre">该版本有以下重大升级，如果不升级程序将不能使用，建议您升级该版本：</string>
    <string name="update_notofy_content_pre">该版本有以下升级：</string>
    <string name="input_text_count_limit">%1$d/500</string>
    <string name="input_text_content_count_limit">500</string>
    <string name="title_text_prized_event">有奖活动</string>
    <string name="title_text_share_prize">分享有奖</string>
    <string name="title_text_special_offer">优惠活动</string>
    <string name="title_text_recommended_prize">推荐有奖</string>
    <string name="title_text_prized_partic">参与详情</string>
    <string name="course_input_organization">请输入机构，课程搜索</string>
    <string name="look_organization">找机构</string>
    <string name="look_course">找课程</string>
    <string name="title_text_search_acts">找活动</string>
    <string name="look_course_apply">我要报名</string>
    <string name="title_text_nearby">附近</string>
    <string name="title_text_course_particulars">课程详情</string>
    <string name="course_success">报名成功， 老师会尽快和您联系.</string>
    <string name="course_error">报名失败</string>
    <string name="title_text_course_m">选择区域列表</string>
    <string name="title_text_course_jiage">选择价格区间</string>
    <string name="info_location_unavailable">定位失败，请检查是否打开GPS</string>
    <string name="info_location_not_ready">正在定位中...</string>
    <string name="kindergarten_introDetail_title">园所详情</string>
    <string name="org_introDetail_title">机构详情</string>
    <string name="title_text_mymessage">我的消息</string>
    <string name="title_text_systemmessage">系统消息</string>
    <string name="title_text_course_comment">课程评价</string>
    <string name="title_text_my_course_comment_view">我的评价</string>
    <string name="title_text_my_course_comment_edit">我要评价</string>
    <string name="title_text_my_circle_of_friends">朋友圈</string>
    <string name="title_text_my_share_friends">分享给好友</string>
	<string name="info_text_upload_image_tips">(上传几张真实图片，你的评价就能帮助更多的朋友们)</string>
</resources>